--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pydantic-settings>=2.7.1",
     "rich>=13.9.4",
     "unitycatalog-langchain[databricks]>=0.1.0",
+    "databricks-connect==15.1.0",
 ]
 
 [project.scripts]
